# api-rest

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
src/: main.py
src/schema/: Task.py
