[project]
name = "todo-list-api-rest"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Tania de Arruda", email = "develop.tania@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
