[project]
name = "todo-list-api-rest"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Tania de Arruda", email = "develop.tania@gmail.com"},
]
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
lint = [
    "pylama>=8.4.1",
]
format = [
    "black>=23.12.0",
]
git-hooks = [
    "pre-commit>=3.6.0",
]
